// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Finished /> Basic Init 1`] = `
<span
  title="2018-11-21 11:09:23"
>
  a few seconds ago
</span>
`;

exports[`<Finished /> Finished with icon 1`] = `
<span
  title="2018-11-21 11:09:23"
>
  <i
    className="fa fa-calendar finished-icon"
  />
  a few seconds ago
</span>
`;

exports[`<Finished /> No datetime provided 1`] = `
<span
  title=""
>
  N/A
</span>
`;
